// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutputPane matches snapshot 1`] = `
<div
  className="outputpane"
>
  <div
    id="spinner-container-transparent"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      id="spinner-l1"
    >
      <div
        id="spinner-l2"
      >
        <div
          id="spinner-l3"
        />
      </div>
    </div>
  </div>
  <TableView
    api={Object {}}
    isReadOnly={false}
    lastRelevantDeltaId={1}
    resizing={false}
    selectedWfModuleId={987}
    setBusySpinner={[Function]}
    showColumnLetter={false}
  />
</div>
`;

exports[`OutputPane renders when no module id 1`] = `
<div
  className="outputpane"
>
  <div
    id="spinner-container-transparent"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      id="spinner-l1"
    >
      <div
        id="spinner-l2"
      >
        <div
          id="spinner-l3"
        />
      </div>
    </div>
  </div>
  <TableView
    api={Object {}}
    isReadOnly={false}
    lastRelevantDeltaId={1}
    resizing={false}
    selectedWfModuleId={null}
    setBusySpinner={[Function]}
    showColumnLetter={false}
  />
</div>
`;
